--- a/src/components/pages/AddAccommodation/AddAccommodation.css
+++ b/src/components/pages/AddAccommodation/AddAccommodation.css
@@ -9,7 +9,7 @@
 .my-background {
   background-color: var(--my-light-gray);
   padding: 30px 30px;
-  min-height: calc(100vh - 112px - 81px);
+  min-height: calc(100vh - 128px - 81px);
 }
 
 .add-accommodation-submit {
@@ -22,4 +22,8 @@
 
 .add-accommodation-input-label {
   display: block;
+}
+
+.add-remove-button {
+  max-width: none !important;
 }
