--- a/src/components/layout/Header/Header.css
+++ b/src/components/layout/Header/Header.css
@@ -16,7 +16,6 @@
   .my-navbar {
     border-bottom: var(--my-gray) solid 1px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    padding: 15px 100px !important;
   }
 }
 
@@ -92,4 +91,29 @@
 #my-nav-id .dropdown .dropdown-menu .my-nav-link:hover,
 #my-nav-id .my-nav-dropdown .my-nav-link:hover {
   color: var(--my-blue);
+}
+
+.logo {
+  height: 75px;
+  width: 225px;
+  background-image: url("/img/aeolians-logo.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.logo-small {
+  height: 130px;
+  width: 100px;
+  background-image: url("/img/aeolians-logo-vertical.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+@media (max-width: 576px) {
+  #basic-navbar-nav {
+    flex: 0 0 100%;
+    min-width: 100%;
+  }
 }
