--- a/src/components/pages/EditAccommodation/EditAccommodation.css
+++ b/src/components/pages/EditAccommodation/EditAccommodation.css
@@ -9,7 +9,7 @@
 .my-background {
   background-color: var(--my-light-gray);
   padding: 30px 30px;
-  min-height: calc(100vh - 128px - 81px);
+  min-height: calc(100vh - 92px - 103px - 25px);
 }
 
 .edit-image-preview-container {
