--- a/src/components/customComponents/Container/Container.css
+++ b/src/components/customComponents/Container/Container.css
@@ -8,7 +8,7 @@
 
 .my-container {
   box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.25);
-  padding: 30px;
+  padding: 30px 0;
   transition: background-color 0.3s ease-in-out;
 }
 
@@ -24,6 +24,13 @@
   border-radius: 5px;
   margin: 0 auto 30px auto;
   width: 100%;
+  max-width: 1000px;
+}
+
+@media (min-width: 592px) {
+  .my-container {
+    padding: 30px;
+  }
 }
 
 @media (min-width: 768px) {
