--- a/src/components/customComponents/Container/Container.css
+++ b/src/components/customComponents/Container/Container.css
@@ -8,7 +8,7 @@
 
 .my-container {
   box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.25);
-  padding: 30px 0;
+  padding: 30px;
   transition: background-color 0.3s ease-in-out;
 }
 
