--- a/src/components/pages/DailyTours/DailyTours.css
+++ b/src/components/pages/DailyTours/DailyTours.css
@@ -29,6 +29,15 @@
   min-height: 400px;
   width: 100%;
 }
+.slider {
+  padding: 30px 0;
+}
+
+@media screen and (min-width: 592px) {
+  .slider {
+    padding: 30px !important;
+  }
+}
 
 @media (min-width: 768px) {
   .carousel-inner {
