--- a/src/components/pages/RentalServices/RentalServices.css
+++ b/src/components/pages/RentalServices/RentalServices.css
@@ -45,6 +45,10 @@
     min-height: 600px;
     width: 100%;
   } */
+
+  .slider {
+    padding: 30px !important;
+  }
 }
 
 .carousel-band {
@@ -73,4 +77,8 @@
 .contact-button:focus {
   color: white;
   text-decoration: none;
+}
+
+.slider {
+  padding: 30px 0;
 }
